--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,27 @@
   gap :20px;
   margin-top: 20px;
 }
+
+.btn {
+  text-align: center;
+  padding: 30px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.btn button {
+  padding: 13px 32px;
+  background-color: rgb(64, 222, 106);
+  border: none;
+  box-shadow: 2px 5px 21px -2px #777777;
+  border-radius: 3px;
+  color: white;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.btn button:hover {
+  transform: translateY(5px);
+  box-shadow: none;
+}
